<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="24dp">

    <Button
        android:id="@+id/mostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostrar"
        android:layout_marginBottom="16dp"/>
    <Button
        android:id="@+id/preferencias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preferencias"
        android:layout_marginBottom="16dp"/>
    <Button
        android:id="@+id/acerca_de"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acerca_de"
        android:layout_marginBottom="16dp"/>
    <Button
        android:id="@+id/salir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salir" />

</LinearLayout>